fixing table overflow: http://dev.gbif.org/issues/browse/POR-1482

--- a/src/main/webapp/less/occ_table.less
+++ b/src/main/webapp/less/occ_table.less
@@ -5,7 +5,7 @@
 #content article.ocurrence_results {
   z-index:1000;
   .content { padding: 0; }
-
+  
   .content  > .footer {
     padding: 24px 26px;
 
@@ -460,6 +460,7 @@
 
     tr td {
       height: 100px;
+      max-width: 200px;
       padding: 0 20px;
 
       line-height: normal;
